welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: '{' expected but 'case' found.
	case 0 return 10:00;
        ^alarmClock:6: error: '}' expected but 'case' found.
	case 1 return 7:00;
        ^alarmClock:7: error: illegal start of definition
	case 2 return 7:00;
        ^alarmClock:8: error: illegal start of definition
	case 3 return 7:00;
        ^alarmClock:9: error: illegal start of definition
	case 4 return 7:00; 
        ^alarmClock:10: error: illegal start of definition
	case 5 return 7:00; 
        ^alarmClock:11: error: illegal start of definition
	case 6 return 10:00;
        ^alarmClock:15: error: eof expected but '}' found.
 }
 ^